# gen3-workflow

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  cfg_help.py  gunicorn.conf.py  pyproject.toml  run.py
.github/workflows/: ci.yml  docs.yaml  integration_tests.yaml  validate_markdown.yaml
docs/: architecture.md  authorization.md  gen3-deployment.md  gpu_support.md  helm_chart_architecture.md  iam_keys.md  local_installation.md  metrics.md  openapi.yaml  s3.md
gen3workflow/: __init__.py  app.py  auth.py  aws_utils.py  config-default.yaml  config.py  metrics.py  models.py  system_key_utils.py  tes_utils.py
gen3workflow/routes/: ga4gh_tes.py  s3.py  storage.py  system.py  utils.py
migrations/: env.py
migrations/versions/: e1886270d9d2_create_system_key_table.py
scripts/: performance_test.py
scripts/performance_test/: base_nextflow.config  gpu.nf  hello.nf  performance_test.py  run_tes_task.py
tests/: conftest.py  test-gen3workflow-config.yaml  test.sh  test_aws_utils.py  test_ga4gh_tes.py  test_metrics.py  test_misc.py  test_s3_endpoint.py  test_storage.py  test_system.py
tests/migrations/: migration_utils.py  test_migration_e1886270d9d2.py  test_migrations.py
