[tool.poetry]
name = "gen3workflow"
version = "0.1.0"
description = "Gen3 Workflow Execution Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/gen3workflow"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
alembic = "<2"
asyncpg = "<1"
authutils = "<7"
boto3 = "<2"
cdislogging = "<2"
fastapi = "<1"
gen3authz = ">=2.2.0,<3"
gen3config = ">=2.0,<3"
gunicorn = "<24"
httpx = "<1"
jsonschema = "<5"
sqlalchemy = { extras = ["asyncio"], version = "<3" }
uvicorn = "<1"
cdispyutils = "^2.4.0"

[tool.poetry.dev-dependencies]
freezegun = "<2"
moto = "<6"
pytest = "<9"
pytest-asyncio = "<1"
pytest-cov = "<7"

[build-system]
requires = ["poetry<2"]
build-backend = "poetry.masonry.api"
