[tool.poetry]
name = "gen3workflow"
version = "0.2.0"
description = "Gen3 Workflow Execution Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/gen3workflow"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.13,<4"
alembic = ">=1"
asyncpg = "<1"
authutils = ">=7"
boto3 = ">=1"
botocore = "*"
cdislogging = ">=1"
fastapi = "<1"
gen3authz = ">=3"
gen3config = ">=2"
gunicorn = "<24"
httpx = "<1"
jsonschema = "<5"
sqlalchemy = { extras = ["asyncio"], version = ">=2" }
uvicorn = "<1"
cdispyutils = ">=2"
starlette = "*"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]
freezegun = "*"
moto = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
deptry = "*"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "asyncpg"
]


[build-system]
requires = ["poetry<2"]
build-backend = "poetry.masonry.api"
